major advancement on topics and queues

--- a/Applications/WebApplication/WebApplication/ClientApp/src/app/pages/historical/historical.component.css
+++ b/Applications/WebApplication/WebApplication/ClientApp/src/app/pages/historical/historical.component.css
@@ -14,3 +14,8 @@
 .queue-data-grid-row {
     padding: 10px;
 }
+
+#add-queue-dialog .ui-dialog {
+    min-width: 550px !important;
+    width: 550px !important;
+}
