--- a/Applications/WebApplication/WebApplication/ClientApp/src/app/pages/home/home.component.html
+++ b/Applications/WebApplication/WebApplication/ClientApp/src/app/pages/home/home.component.html
@@ -6,4 +6,17 @@
       </div>
     </div>
   </div>
+  <div class="paragraph">
+    <div class="paragraph-title">
+      Kick-start
+    </div>
+    Experience Stream Analysis data visualization feautures.
+  </div>
+  <div class="bg-img" id="bg-img-2"></div>
+  <div class="paragraph">
+    <div class="paragraph-title">
+      Secure
+    </div>
+    Stream Anlysis infrastrucure is built inside a VPC(virutal private cloud) meaning your information and data is completely secure.
+  </div>
 </div>
