--- a/Applications/WebApplication/WebApplication/ClientApp/src/app/pages/container/container.component.css
+++ b/Applications/WebApplication/WebApplication/ClientApp/src/app/pages/container/container.component.css
@@ -1,3 +1,30 @@
+/* Disabling anchor properties */
+p-accordion a, p-accordiona:visited, p-accordion a:hover, p-accordion a:active {
+    text-decoration: inherit !important;
+}
+
+.home-btn {
+    position: absolute;
+    right: 0px;
+    top: 35px;
+    border-radius: 12px 0px 0px 12px;
+    padding-left: 11px;
+    padding-top: 3px;
+    width: 90px;
+    height: 32px;
+    background-color: #007ad9;
+    color: white;
+    font-size: 14px;
+    border: 1px solid #007ad9;
+    font-family: "Open Sans", "Helvetica Neue", sans-serif;
+    cursor: pointer;
+}
+
+.home-btn .icon {
+    margin-right: 7px;
+    font-size: 15px;
+}
+
 .ui-steps .ui-steps-item {
     width: 20%;
 }
