--- a/Applications/WebApplication/WebApplication/ClientApp/src/app/pages/container-login/container-login.component.html
+++ b/Applications/WebApplication/WebApplication/ClientApp/src/app/pages/container-login/container-login.component.html
@@ -8,6 +8,6 @@
           </div>
         </div>
       </div>
-      <div><a routerLink="/register">Register</a> | <span class="copy-right">© 2019, Stream Analysis. All rights reserved.</span></div>
+      <div><a routerLink="/container/register">Register</a> | <span class="copy-right">© 2019, Stream Analysis. All rights reserved.</span></div>
     </div>
   </div>
